--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@
 
 /*------------COLOR NAV--------------*/
 .bg-ryf {
-  background-color: #3aaa35;
+  background-color: #3ba136;
 }
 
 .div-con-imagen {
